fix icon and align

--- a/nav/css/index.css
+++ b/nav/css/index.css
@@ -2,3 +2,6 @@ img {
 	height: 16px;
 	width: 16px;
 }
+span {
+	vertical-align: middle;
+}
